# patterns

./: .gitignore  CMakeLists.txt  Logger.cpp  Logger.h  main.cpp  todo list.txt
Bridge/: IPrinter.h  PDFPrinter.cpp  PDFPrinter.h  PaperPrinter.cpp  PaperPrinter.h  TicketPrinter.cpp  TicketPrinter.h
commercial/: Bank.cpp  Bank.h  Cafe.cpp  Cafe.h  CommercialService.cpp  CommercialService.h  Hotel.cpp  Hotel.h  WaitingRoom.cpp  WaitingRoom.h
compulsory/: BaggageService.cpp  BaggageService.h  BoardingProxy.cpp  BoardingProxy.h  CompulsoryService.cpp  CompulsoryService.h  CustomsControl.cpp  CustomsControl.h  GroupOfServices.cpp  GroupOfServices.h  ICompulsory.h  InformationExpert.cpp  InformationExpert.h  PassportControl.cpp  PassportControl.h  PlaceOfBoarding.cpp  PlaceOfBoarding.h  Reception.cpp  Reception.h
documents/: Document.cpp  Document.h  DocumentAdapter.h  InternationalPassportAdapter.cpp  InternationalPassportAdapter.h  PassportAdapter.cpp  PassportAdapter.h  Ticket.cpp  Ticket.h  VisaAdapter.cpp  VisaAdapter.h
flights/: DirectFlight.cpp  DirectFlight.h  DomesticFlight.cpp  DomesticFlight.h  Flight.cpp  Flight.h  FlightVisitor.h  InternationalFlight.cpp  InternationalFlight.h  SimpleFlightVisitor.cpp  SimpleFlightVisitor.h  TransferFlight.cpp  TransferFlight.h
iterator/: BackwardIterator.cpp  BackwardIterator.h  ForwardIterator.cpp  ForwardIterator.h  Iterable.h  Iterator.h
passenger/: IVisitingServices.cpp  IVisitingServices.h  IncomingPassenger.cpp  IncomingPassenger.h  OutgoingPassenger.cpp  OutgoingPassenger.h  Passenger.cpp  Passenger.h
(+29 files in other folders)
